[gd_scene load_steps=7 format=3 uid="uid://b75yggsnay1mo"]

[ext_resource type="Script" uid="uid://lskce3onqffn" path="res://connection/connection.gd" id="1_c7jwa"]

[sub_resource type="DojoQuery" id="DojoQuery_erpqw"]

[sub_resource type="EntitySubscription" id="EntitySubscription_erpqw"]
name = "Entity"

[sub_resource type="MessageSubscription" id="MessageSubscription_erpqw"]
name = "Message"

[sub_resource type="DojoPolicy" id="DojoPolicy_2kgrw"]
method = "player_move"

[sub_resource type="DojoPolicies" id="DojoPolicies_b2hkl"]
name = "GameActions"
contract = "0x072593bd6b7770a56ff9b9ec7747755f0c681a7f7dc09133c518b7150efe5949"
policies = Array[DojoPolicy]([SubResource("DojoPolicy_2kgrw")])

[node name="Connection" type="Node"]
script = ExtResource("1_c7jwa")
query = SubResource("DojoQuery_erpqw")
entity_sub = SubResource("EntitySubscription_erpqw")
message_sub = SubResource("MessageSubscription_erpqw")

[node name="ToriiClient" type="ToriiClient" parent="."]
torii_url = "http://127.0.0.1:8080"
world_address = "0x072593bd6b7770a56ff9b9ec7747755f0c681a7f7dc09133c518b7150efe5949"

[node name="ControllerAccount" type="ControllerAccount" parent="."]
rpc_url = "http://localhost:5050"
chain_id = "KATANA"
policies = SubResource("DojoPolicies_b2hkl")

[node name="Account" type="Account" parent="."]

[connection signal="client_connected" from="ToriiClient" to="." method="_on_torii_client_client_connected"]
[connection signal="client_disconnected" from="ToriiClient" to="." method="_on_torii_client_client_disconnected"]
[connection signal="subscription_created" from="ToriiClient" to="." method="_on_torii_client_subscription_created"]
[connection signal="controller_connected" from="ControllerAccount" to="." method="_on_controller_account_controller_connected"]
[connection signal="controller_disconnected" from="ControllerAccount" to="." method="_on_controller_account_controller_disconnected"]
[connection signal="provider_status_updated" from="ControllerAccount" to="." method="_on_controller_account_provider_status_updated"]
[connection signal="transaction_executed" from="Account" to="." method="_on_account_transaction_executed"]
[connection signal="transaction_failed" from="Account" to="." method="_on_account_transaction_failed"]
